--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
     <span routerLink="/sidenav">Sidenav</span>
     <span routerLink="/modal">Modal</span>
     <span routerLink="/employee">Employees</span>
+    <span routerLink="/card">Card</span>
+    <span routerLink="/layout">Layout</span>
+    <span routerLink="/namelayout">Name Layout</span>
+    <span routerLink="/ngclass">Ng Class</span>
     <!-- <span>Table</span> -->
   </div>
 </mat-toolbar>
