candeactivate for customers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <mat-toolbar color="primary" class="navbars">
   <div>Angular Material</div>
   <div>
-    <span routerLink="/buttons">Buttons</span>
+    <!-- <span routerLink="/buttons">Buttons</span>
     <span routerLink="/spinner">Spinner</span>
-    <span routerLink="/sidenav">Sidenav</span>
+    <span routerLink="/sidenav">Sidenav</span> -->
     <span routerLink="/modal">Modal</span>
     <span routerLink="/employee">Employees</span>
     <span routerLink="/card">Card</span>
     <span routerLink="/layout">Layout</span>
     <span routerLink="/namelayout">Name Layout</span>
     <span routerLink="/ngclass">Ng Class</span>
+    <span routerLink="/customers">Customers</span>
     <!-- <span>Table</span> -->
   </div>
 </mat-toolbar>
