--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
     <span routerLink="/namelayout">Name Layout</span>
     <span routerLink="/ngclass">Ng Class</span>
     <span routerLink="/customers">Customers</span>
+    <span routerLink="/matpagination">Material Pagination</span>
+    <span routerLink="/pagination">Pagination</span>
+    <span routerLink="/tabs">Tabs</span>
+    <span routerLink="/paginationwithparams">Pagination with Params</span>
+    <span routerLink="mytab">My Tab</span>
     <!-- <span>Table</span> -->
   </div>
 </mat-toolbar>
